css/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald:400,500,700');
*{
  padding:0;
  margin:0;
  font-family: 'Oswald',Arial, sans-serif;
}
#main-header{
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
}
.body-container{
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
}
ul{
  list-style:none;
}
img{
  max-width:100%;
  height:auto;
}

/* nav bar stuff */
#navbar{
  width: 100%;
  max-height: 150px;
  margin-top: 25px;
  display:flex;
  flex-direction: row;
  justify-content: space-between;
}
#jnalogo{
  max-width: 150px;
  max-height: 150px;
}
#vertical-ul{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
#videography{
  font-size: 28px;
  letter-spacing: 1px;
  font-weight: 700;
  padding-top: 10px;
}
#photography{
  font-size: 28px;
  font-weight: 700;
  padding-bottom: 5px;
}
#nashville-tn{
  font-family: Arial, Helvetica, sans-serif;
  letter-spacing: 2px;
  font-size: 20px;
  margin-bottom: 20px;
}

#navbar a{
  text-decoration: none;
}
#navbar a:link, a:visited{
  color:#000;
}
#navbar a:hover{
  color: #7a7d7d;
}
#navbar h2{
  font-size:28px;
  font-weight: 700;
  align-self: center;
}
#insta-logo{
  max-width: 40px;
  max-height: 40px;
  align-self: center;
}

/* video example stuff  */
#showcase-vid{
  position:absolute;
  top:0;
  left:0;
  width:100%;
  height:100%;
}
.video-embed{
  width:100%;
  height:100%;
}
#video-example-ul{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 1em;
  margin-bottom: 4em;
}

/* photo example stuff */
#photo-examples {
  margin-top: 4em;
  margin-bottom: 4em;
  width: 100%;
  display: flex;
  flex-direction:row-reverse;
  }
#photo-box-1 {
  display:flex;
  flex-direction: column;
  justify-content: space-between;
}
#photo-box-2{
  margin-right: 2em;
}

/* about us stuff */
#about-us{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
#about-us-text{
  display: flex;
  flex-direction: column;
}
#about-us-text h1{
  font-size: 38px;
  font-weight: 700;
}
#about-us-text p{
  font-size: 16px;
  font-weight: 400;
  line-height: 30px;

}
#jna-faces{
  max-width: 450px;
  max-height: 450px;
}

/* contact us stuff */
#contact-us{
  padding-top: 100px;
  padding-bottom: 75px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}
#victor-picture{
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
}
#contact-us-text{
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  text-align: right;
  align-self:baseline;
  margin-top: 20px;
}
#contact-us-text h1{
  font-size: 38px;
  font-weight: 700
  margin-bottom: 15px;
}
#contact-us-text p{
  font-size: 16px;
  font-weight: 400;
  line-height: 30px;
  padding-left: 25px;
}
#contact-us-form{
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 3;
}
.non-button-input{
  width:100%;
  height: 38px;
  margin-top: 5px;
  margin-bottom: 20px;
  color: #7a7d7d;
  padding-left: 10px;
  text-rendering: auto;
}
#contact-us-form label{
  font-size: 14px;
  letter-spacing: 1px;
  font-weight: 700;
}
.submit-button{
  background-color: transparent;
  letter-spacing: 1px;
  width: 78px;
  height: 38px;
  border: 1px solid black;
  font-weight: 500;
  padding-top:5px;
  text-align:center;
}
#hanh-patio{
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 2;
  grid-row-end: 3;
  max-width: 80%;
  max-height: auto;
  justify-self: end;
}

/* margin bottom of page */
.bottom-margin{
  margin-bottom: 125px;
}

